prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  ports:
  - port: 80
    name: web
    targetPort: 9696
  clusterIP: None
