prowlarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: prowlarr
spec:
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:uMx/4PEjfZaObJ0uN43OOauGL+WWtuL8TJOpbA==,iv:iGeTvgo5H2FBJWAz0QLFDTkGRaC+pBtfOA0fR1x2rzA=,tag:dqVHJtpW+3LlwOcOx8zx2Q==,type:str]
          middlewares: []
          services:
            - kind: Service
              name: prowlarr
              port: 80
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2023-09-11T06:05:10Z"
    mac: ENC[AES256_GCM,data:u3kIUa3KZNpzxXwntRWeuX/JRNYs1w2a6JXwMQmEycVXbOEsdJ5U5SuhuGgvzx+Co5q3oE9fp8uYKeJ6qpeJORAYRT5gZnutacaJ0qT+LgoB3y87YeZc9V7LGwLWd7KrRjD4g9wBoRyDNFVJis8RtdcD6v1YRQYzlv9OgEpB12g=,iv:D4HYu4hecBoyKJMQbBQESlQpQ+sN1NXUW3ygBvm9DvI=,tag:2PzH4Rgj1hB0/2soE586Pg==,type:str]
    pgp:
        - created_at: "2023-09-11T06:05:09Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMAyyGYy7YCFAQARAA4WWM0LXMmaI6tSpOZjBbADNYBdenkUjCu0J+jHcK3ZmR
[...]
            peP+pqOwHMWc
            =yn9+
            -----END PGP MESSAGE-----
          fp: 75C3F62D6A9AA2165875F5C680A364E41D3C47AF
    encrypted_regex: ^(match)$
    version: 3.7.3
